edited image and css paths and edited out form

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 {% block content %}
 <img src={{ imagePath }} alt="crakins.com"/>
 
-<form name="email" action="/" method="post" >
+<!--<form name="email" action="/" method="post" >
 		<ul>
 			<li><input type="text" name="email" class="inputbox" placeholder="you@yourmail.com" /></li>
 			<li><input type="submit" class="submit" value="Submit" /></li>
 		</ul>
-</form>
+</form> -->
 {% end %}
