--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ a:hover{
 	background-color:#FFF;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
+
 .clr {
 	clear:both
 }
@@ -33,8 +39,8 @@ a:hover{
 .header {
 	width:100%;
 	top:0;
-	height:50px;
-	padding:15px 0;
+	height:10px;
+	padding:1px 0;
 	text-align:center;
 	background:#FFFFFF;
 	/*background:url(../images/bg-01.jpg) repeat #ee4e1d;*/
@@ -43,7 +49,7 @@ a:hover{
 	font-weight: normal;
 	word-spacing:5px;
 	letter-spacing: 0px;
-	line-height: 55px;
+	line-height: 5px;
 	color: #999;
 } 
 
@@ -59,24 +65,61 @@ a:hover{
 }
 
 .image-swap{
-	width:680;
-	height:240;
-	background-image:url(crakinscom.png);
-	background-position: 0 0;
+    margin-left: auto;
+	margin-right: auto;
+    height: 240px;
+    width: 680px;
+	background-image: url(../images/crakinscom.png);
+	background-repeat: no-repeat;
 }
 
 .image-swap:hover{
-	background-image:url(crakinscom_yellow.png);
+	background-image:url(../images/crakinscom_yellow.png);
+	background-repeat: no-repeat;
 }
 
 .copyright{
 	font-family:Helvetica;
 	font-size: 12px;
 	font-weight: bold;
-	word-spacing:5px;
-	letter-spacing: 0px;
-	line-height: 20px;
 	color: #000000;
-	margin-top:10px;
 	text-align:center;
+	margin-top:10px;
+}
+/*---- Media Queries to make design responsive ----*/
+
+@media only screen and (max-width: 680px) and (min-width: 510px){
+	.image-swap{ 
+		margin-left: auto;
+		margin-right: auto;
+		height: 180px;
+		width: 510px;
+		background-image: url(../images/crakinscom_510.png); 
+	}
+
+	.image-swap:hover{ 
+		margin-left: auto;
+		margin-right: auto;
+		height: 180px;
+		width: 510px;
+		background-image:url(../images/crakinscom_yellow_510.png);
+	}
+}
+
+@media only screen and (max-width: 509px){
+	.image-swap{ 
+		margin-left: auto;
+		margin-right: auto;
+		height: 120px;
+		width: 340px;
+		background-image: url(../images/crakinscom_340.png); 
+	}
+
+	.image-swap:hover{ 
+		margin-left: auto;
+		margin-right: auto;
+		height: 120px;
+		width: 340px;
+		background-image:url(../images/crakinscom_yellow_340.png);
+	}
 }
