--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,15 @@
 </script>
     </head>
     <body>
-        <div class="container">
-        	<div class="header">
-        		
-        	</div>
-        	
-			<div id="content">
+        <section class="container">
+        	<div class="header"></div>
+        	<div class="image-swap"></div>
+			<div class="content">
 			  {% block content %}{% end %}
 			</div>
-			
-			<p class="copyright">
+			<div class="copyright">
 				&copy; 2014 crakins.com
-			</p>
-        </div>
+			</div>
+        </section>
     </body>
 </html>
