--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a href="/rivers">rivers</a>
 <!--<img src={{ imagePath }} alt="crakins.com"/>
-
 
 <form name="email" action="/" method="post" >
 		<ul>
