--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <body>
         <section class="container">
         	<div class="header"></div>
-        	<div class="image-swap"></div>
+        	<div class="image-swap" onclick="location.href='/';" style="cursor: hand;"></div>
 			<div class="content">
 			  {% block content %}{% end %}
 			</div>
