--- a/templates/corivers.html
+++ b/templates/corivers.html
@@ -15,7 +15,7 @@
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/360" target="_blank">Royal Gorge</a></td>
 <td>III-IV</td>
 <td>300-7000 cfs</td>
-<td>{{ levels['Royal Gorge'] }} cfs</td>
+<td>{{ levels_cswc['Royal Gorge'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/356" target="_blank">The Numbers</a></td>
@@ -33,7 +33,7 @@
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3110/" target="_blank">Clear Creek of Ark</a></td>
 <td>V</td>
 <td>150-1000 cfs</td>
-<td>??? cfs</td>
+<td>{{ levels_cswc['Clear Creek of Ark'] }} cfs</td>
 </tr>
 </table>
 <br>
@@ -62,8 +62,8 @@
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3375/" target="_blank">Oh Be Joyful</a></td>
 <td>V</td>
-<td>500-1800 cfs</td>
-<td>??? cfs</td>
+<td>500-1800 cfs<br><span>*on Slate gauge*</span></td>
+<td>{{ levels['Slate'] }} cfs</td>
 </tr>
 </table>
 <br><br>
