adding river low, med, high ranges

--- a/templates/corivers.html
+++ b/templates/corivers.html
@@ -8,32 +8,52 @@
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/358" target="_blank">Browns Canyon</a></td>
 <td>III</td>
-<td>300-5000 cfs</td>
+<td>
+Low: 600-1000<br>
+Med: 1000-2500<br>
+High: 2500-5000
+</td>
 <td>{{ levels['Browns Canyon'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/360" target="_blank">Royal Gorge</a></td>
 <td>III-IV</td>
-<td>300-7000 cfs</td>
-<td>{{ levels_cswc['Royal Gorge'] }} cfs</td>
+<td>
+Low: 200-1000<br>
+Med: 1000-2000<br>
+High: 2000-7000
+</td>
+<td>{{ levels_cswc['Royal Gorge'] }}</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/356" target="_blank">The Numbers</a></td>
 <td>IV</td>
-<td>300-3500 cfs</td>
+<td>
+Low: 300-1000<br>
+Med: 1000-2200<br>
+High: 2200-3500
+</td>
 <td>{{ levels['The Numbers'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/355" target="_blank">Pine Creek</a></td>
 <td>IV-V</td>
-<td>200-5000 cfs</td>
+<td>
+Low: 200-900<br>
+Med: 900-1500<br>
+High: 1500-5000
+</td>
 <td>{{ levels['Pine Creek'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3110/" target="_blank">Clear Creek of Ark</a></td>
 <td>V</td>
-<td>150-1000 cfs</td>
-<td>{{ levels_cswc['Clear Creek of Ark'] }} cfs</td>
+<td>
+Low: 150-300<br>
+Med: 300-400<br>
+High: 450-1000
+</td>
+<td>{{ levels_cswc['Clear Creek of Ark'] }}</td>
 </tr>
 </table>
 <br>
@@ -44,25 +64,37 @@
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3379/" target="_blank">Upper East</a></td>
 <td>IV</td>
-<td>600-3000 cfs</td>
+<td>
+600-3000 cfs<br>
+900-2500 Optimal
+</td>
 <td>{{ levels['Upper East'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3378/" target="_blank">Daisy Creek</a></td>
 <td>V</td>
-<td>500-2500 cfs</td>
+<td>
+500-2500 cfs<br>
+700-1600 Optimal
+</td>
 <td>{{ levels['Daisy Creek'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3377/" target="_blank">Slate</a></td>
 <td>V</td>
-<td>500-2500 cfs</td>
+<td>
+500-2500 cfs<br>
+700-2500 Optimal
+</td>
 <td>{{ levels['Slate'] }} cfs</td>
 </tr>
 <tr>
 <td><a href="http://www.americanwhitewater.org/content/River/detail/id/3375/" target="_blank">Oh Be Joyful</a></td>
 <td>V</td>
-<td>500-1800 cfs<br><span>*on Slate gauge*</span></td>
+<td>500-1800 cfs<br>
+700-1200 Optimal<br>
+<span>(on Slate gauge)</span>
+</td>
 <td>{{ levels['Slate'] }} cfs</td>
 </tr>
 </table>
