--- a/templates/corivers.html
+++ b/templates/corivers.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br>
+<br />
+<img src="../images/rivers_small.jpg" />
 <p><h1>Arkansas Valley, CO</h1></p>
 <table>
 <tr><th>River</th><th>Class</th><th>Range</th><th>Level</th></tr>
