--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <meta name="author" content="crakins" />
         <link rel="shortcut icon" href="/images/favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
+        <link rel="stylesheet" href="css/hover-min.css" media="all">
         <script type="text/javascript"></script>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -29,7 +30,7 @@
 			  {% block content %}{% end %}
 			</div>
 			<div class="copyright">
-				&copy; 2014 crakins.com
+				&copy; 2016 crakins.com
 			</div>
         </section>
     </body>
